--- a/src/webview-ui/package.json
+++ b/src/webview-ui/package.json
@@ -11,7 +11,7 @@
 		"test": "vitest"
 	},
 	"dependencies": {
-		"@vscode-elements/elements": "^2.3.0",
+		"@vscode-elements/elements": "2.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"js-tiktoken": "^1.0.20",
