fix: Enhance context handling with token counting, file saving, and multi-workspace support

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
-    "lint": "biome check src --apply",
+    "lint": "biome check src --write",
     "test": "vscode-test",
     "package": "pnpm run check-types && pnpm run lint && node esbuild.js --production",
     "build:esbuild": "node esbuild.js",
