feat: Thêm cơ chế phục hồi lỗi webview và dọn dẹp bộ nhớ đệm bằng các script chuyên dụng, đồng thời xóa bộ nhớ đệm token khi khởi động.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,13 @@
         }
       ]
     },
-    "commands": []
+    "commands": [
+      {
+        "command": "overwrite.cleanCache",
+        "title": "Overwrite: Fix Webview Issues (Clean Cache)",
+        "category": "Overwrite"
+      }
+    ]
   },
   "scripts": {
     "vscode:package": "pnpm run package && pnpm vsce package --no-dependencies",
